--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/prodeti.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/slick.css"/>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -387,42 +388,45 @@
               </div>
 
       </div>-->
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <div class="slide">
-          <div class="photo">
-            <img src="/images/rodice/prema.jpg" alt="[fotografie] Přemysl Novák"
-                 style="filter: grayscale(1.0) brightness(1.1);">
-          </div>
-          <blockquote class="description">
-            <p>Na Kurzech pro děti se mi líbí, že celé probíhají opravdu ve hře.
-              Děti jsou nenuceným způsobem seznámeni s&nbsp;kódy a výpočetními technikami,
-              které do IT patří. Syna to moc bavilo, a proto byl celý kurz aktivní a
-              zároveň soustředěný. Hodně si z&nbsp;toho odnesl.</p>
-          </blockquote>
-          <div class="name">
-            Přemysl Novák
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <div class="slide">
+            <div class="photo">
+              <img src="/images/rodice/prema.jpg" alt="[fotografie] Přemysl Novák"
+                   style="filter: grayscale(1.0) brightness(1.1);">
+            </div>
+            <blockquote class="description">
+              <p>Na Kurzech pro děti se mi líbí, že celé probíhají opravdu ve hře.
+                Děti jsou nenuceným způsobem seznámeni s&nbsp;kódy a výpočetními technikami,
+                které do IT patří. Syna to moc bavilo, a proto byl celý kurz aktivní a
+                zároveň soustředěný. Hodně si z&nbsp;toho odnesl.</p>
+            </blockquote>
+            <div class="name">
+              Přemysl Novák
+            </div>
           </div>
         </div>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <div class="slide">
-          <div class="photo">
-            <img src="/images/rodice/ondra.jpg" alt="[fotografie] Ondřej Sedloň">
-          </div>
-          <blockquote class="description">
-            <p>Programování pro děti zaujalo mou dcerku Magdalénu natolik, že se
-              v&nbsp;průběhu akce začala přetahovat s&nbsp;chlapečkem o&nbsp;robotka Genius a nakonec
-              musela tvrdě “vyjednat” win-win řešení, jak se o&nbsp;něj nepoprat. Abychom
-              se mohli z&nbsp;nově nabytých znalostí těšit déle, pořídili jsme hned
-              jednoho&nbsp;domů…</p>
-          </blockquote>
-          <div class="name">
-            Ondřej Sedloň
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <div class="slide">
+            <div class="photo">
+              <img src="/images/rodice/ondra.jpg" alt="[fotografie] Ondřej Sedloň">
+            </div>
+            <blockquote class="description">
+              <p>Programování pro děti zaujalo mou dcerku Magdalénu natolik, že se
+                v&nbsp;průběhu akce začala přetahovat s&nbsp;chlapečkem o&nbsp;robotka Genius a nakonec
+                musela tvrdě “vyjednat” win-win řešení, jak se o&nbsp;něj nepoprat. Abychom
+                se mohli z&nbsp;nově nabytých znalostí těšit déle, pořídili jsme hned
+                jednoho&nbsp;domů…</p>
+            </blockquote>
+            <div class="name">
+              Ondřej Sedloň
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+
   <section id="kontakt" class="contact">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
