--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -75,6 +75,8 @@
           <div class="startup"><a href="https://www.gorealeurope.com/" class="hatched"><img src="/images/logos/go-real-europe.png" alt="Go Real Europe" width="120"></a></div>
           <div class="startup"><a href="https://www.coocooshop.com/"><img src="/images/logos/coocoon.png" alt="Coocoo Shop" width="120"></a></div>
           <div class="startup"><a href="http://www.bouncepilot.com/"><img src="/images/logos/bouncepilot.png" alt="BouncePilot" width="120"></a></div>
+          <div class="startup"><a href="https://www.quickshirt.cz/"><img src="/images/logos/bouncepilot.png" alt="BouncePilot" width="120"></a></div>
+
         </div>
       </div>
     </div>
