Block chain section Security, Wha We Offer

--- a/blockchain.topmonks.cz/src/html/index.html
+++ b/blockchain.topmonks.cz/src/html/index.html
@@ -7,10 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700&subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -180,53 +179,57 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>What Can We Do for You?</h2>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <h3>Blockchain development</h3>
+        <div class="offer_white-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <h3 class="blockchain_bubble">Blockchain development</h3>
           <p>We will provide the entire blockchain technology service; from core blockchain development to decentralized
             applications on the top of it. We can connect the developed blockchain to a particular existing API of the
             centralized application. </p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <h3>dApps development</h3>
+        <div class="offer_purple-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <h3 class="aApps_bubble">dApps development</h3>
           <p>We trained our developers to build a bulletproof and error-free
             smartcontracts. They can prepare the whole set of smartcontracts for your ICO,
             and also develop your mobile/web dApp's&nbsp;interface. The dTeam provide a full
             package service; UX design, dApp back-end, dApp front-end, smartcontracts.</p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <h3>ICO</h3>
+        <div class="offer_white-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <h3 class="ICO_bubble">ICO</h3>
           <p>You can make use of our graphic designers who will prepare the whole visual
             identity; from landing page to dApp UX design. We are ready to kick off ICO, KYC
             or AML for&nbsp;you.</p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <h3>Consultations</h3>
-          <p>If not sure, where to start with your ICO or dApp, you can discuss your current idea with us. We can
-            help
-            you with matters of Security audits, cryptography, architecture, training, testing, code review, code
-            update, and everything else that is part of our skillset.</p>
-        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="we-offer2" class="offer2">
+    <div class="mdc-layout-grid wrapper">
+      <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h3>Infrastructure</h3>
-          <p>You shall not underestimate the hosting of infrastructure and its security. We know what is needed to
-            be
-            done and we will set it up for you. Decentralizovane projekty vyzaduju decentralizovanu architekturu,
-            vieme vam pomoct so setupom your nodes and master nodes, make it always scalable and manage its
-            security.</p>
+          <p>You shall not underestimate the hosting of infrastructure and its security. We know what is needed to be
+            done and we will set it up for you. Decentralizovane projekty vyzaduju decentralizovanu architekturu, vieme
+            vam pomoct so setupom your nodes and master nodes, make it always scalable and manage its security.</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <h3>Consultations</h3>
+          <p>If not sure, where to start with your ICO or dApp, you can discuss your current idea with us. We can help
+            you with matters of Security audits, cryptography, architecture, training, testing, code review, code
+            update, and everything else that is part of our skillset.</p>
         </div>
       </div>
     </div>
   </section>
+
   <section id="security" class="security">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h3 class="h3-larger">Security first</h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="security_text mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <p>Security matters and you should not take it lightly. Any blockchain network is only as secure as its
-            infrastructure.
-          </p>
+            infrastructure.</p>
           <p>Security is a crucial part of the development process that we focus on
             meticulously because once you put your smartcontracts or anything else live,
             into the blockchain, you can't take it&nbsp;back.</p>
