Blockchain - contact, how we work section

--- a/blockchain.topmonks.cz/src/html/index.html
+++ b/blockchain.topmonks.cz/src/html/index.html
@@ -116,10 +116,10 @@
 
     <ul id="navigace">
       <li>
-        <a href="#uvod">What Can We Do for You</a>
+        <a href="#uvod">What can we do for you</a>
       </li>
       <li>
-        <a href="#courses">Security First</a>
+        <a href="#courses">Security first</a>
       </li>
       <li>
         <a href="#galerie">How we work</a>
@@ -225,7 +225,7 @@
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <h3 class="h3-larger">Security first</h3>
+          <h3 class="h3_larger">Security first</h3>
         </div>
         <div class="security_text mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <p>Security matters and you should not take it lightly. Any blockchain network is only as secure as its
@@ -246,48 +246,47 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>How we work</h2>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <h3 class="h3-larger">We listen</h3>
+        <div class="our-work_box box1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <h3 class="h3_larger">We listen</h3>
           <p>We see the time devoted to your project as an investment into your future. We
             listen to your ideas and needs and think about the best solution to do the
             project right the first&nbsp;time.</p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <h3 class="h3-larger">We develop</h3>
+        <div class="our-work_box box2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <h3 class="h3_larger">We develop</h3>
           <p>We work with the latest technologies to get the best results. We don’t need lengthy training or
             explanations. We’ll provide you with a great team of senior developers who are ready to work
             immediately.</p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <h3 class="h3-larger">We verify</h3>
+        <div class="our-work_box box3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <h3 class="h3_larger">We verify</h3>
           <p>We closely examine and test every idea and every feature in every step of the
             project. We concentrate on the needs of the end user. We don’t take risks. We
             don’t launch anything we don’t stand&nbsp;by.</p>
         </div>
       </div>
-      <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__inner why-topmonks">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Why TopMonks?</h2>
-          <p>Because We Drive the Community!</p>
+          <h2 class="h2_title">Because We Drive the Community!</h2>
         </div>
-        <div class="mdc-layout-grid__cell--span-4-desktop">
-          <h3>Crypto-salaries</h3>
+        <div class="our-work_crypto mdc-layout-grid__cell--span-4-desktop">
+          <h3 class="h3_larger">Crypto-salaries</h3>
           <p>We are not just crypto fans. We do not just dream of the decentralized world.
             We live it. We pay our employees in cryptocurrencies and they don't just hold
             it, they buy stuff for it. That's&nbsp;normal for&nbsp;us.</p>
         </div>
-        <div class="mdc-layout-grid__cell--span-4-desktop">
-          <h3>Members of community</h3>
+        <div class="our-work_members mdc-layout-grid__cell--span-4-desktop">
+          <h3 class="h3_larger">Members of community</h3>
           <p>We are active participants of blockchain events and hackathons in the first
             blockchain hub in The Czech Republic&nbsp;&ndash; Paralelni Polis. We are also members
             of Cryptovalley and Blockchain Slovakia.</p>
         </div>
-        <div class="mdc-layout-grid__cell--span-4-desktop">
-          <h3>Conference</h3>
-          <p>Recently, we co-organized Blockstars, the biggest CZ/SK Blockchain Conference. It was focused on the
-            blockchain technologies and their future. Its goal was to promote blockchain throughout the commercial and
-            startup scene and support newly arisen blockchain and ICO projects to offer inspiration both within and
-            beyond the crypto community.</p>
+        <div class="our-work_blockstars mdc-layout-grid__cell--span-4-desktop">
+          <h3 class="h3_larger">Blockstars Conference</h3>
+          <p>We co-organized blockchain Summit. Its goal was to promote blockchain through the commercial and startup
+            scene and support new blockchain and ICO projects to offer inspiration both within and beyond the crypto
+            community.</p>
         </div>
       </div>
     </div>
@@ -299,19 +298,61 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Interested? </h2>
-          <p>Leave us a Message!</p>
+          <h2 class="h2_title">Leave us a Message!</h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <img src="/images/team/lea.svg">
           <h4>Lea Petrášková</h4>
-          <p>Slovena</p>
+          <p>Blockchain & Crypto Projects</p>
+          <a href="">
+            <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g id="Blockchain---doplnene-texty-2" transform="translate(-383.000000, -4098.000000)" fill="#1C1C37">
+                  <g id="paticka" transform="translate(0.000000, 3772.000000)">
+                    <g id="box-1-copy-4" transform="translate(250.000000, 150.000000)">
+                      <path d="M144.01513,184.07304 C142.739075,184.084512 141.809629,184.952226 141.812062,186.129516 C141.814496,187.324535 142.824423,188.244395 144.097349,188.210848 C145.377923,188.177127 146.287032,187.311846 146.281991,186.131254 C146.276602,184.886 145.367841,184.060872 144.01513,184.07304 Z M142.146503,201.737074 L145.988051,201.737074 L145.988051,189.859887 L142.146503,189.859887 L142.146503,201.737074 Z M160.3431,201.737595 C160.3431,200.77793 160.359092,199.912649 160.339797,199.048411 C160.297384,197.141074 160.35127,195.22209 160.151197,193.330571 C159.965029,191.571676 158.981523,190.238469 157.195986,189.734389 C155.425745,189.234479 153.809861,189.506162 152.543019,190.983988 C152.468274,191.071072 152.362936,191.131735 152.225613,191.241938 C152.200582,190.723256 152.180245,190.300176 152.160255,189.884396 L148.27751,189.884396 L148.27751,201.716389 L152.197801,201.716389 L152.197801,200.807479 C152.197801,198.867116 152.18911,196.926926 152.201104,194.986737 C152.208926,193.72497 153.005222,192.801286 154.126919,192.710551 C155.388546,192.608344 156.05708,193.199857 156.289311,194.651088 C156.343892,194.992125 156.356234,195.342548 156.35745,195.6888 C156.364056,197.426314 156.35832,199.163828 156.362839,200.901343 C156.363534,201.176675 156.393954,201.452007 156.411336,201.737595 L160.3431,201.737595 Z M150.518471,176.000273 C160.296689,176.054331 168.064091,183.914863 167.999601,193.690901 C167.93685,203.246883 160.00049,211.043274 150.380279,210.999819 C140.749118,210.956364 132.889067,202.98702 133.001185,193.378893 C133.114171,183.6809 140.909733,175.947083 150.518471,176.000273 Z" id="Fill-1"></path>
+                    </g>
+                  </g>
+                </g>
+              </g>
+            </svg>
+          </a>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <img src="/images/team/lumir.svg">
           <h4>Lumir Mrkva</h4>
-          <p>CTO</p>
+          <p>Team leader</p>
+          <a href="">
+            <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g id="Blockchain---doplnene-texty-2" transform="translate(-383.000000, -4098.000000)" fill="#1C1C37">
+                  <g id="paticka" transform="translate(0.000000, 3772.000000)">
+                    <g id="box-1-copy-4" transform="translate(250.000000, 150.000000)">
+                      <path d="M144.01513,184.07304 C142.739075,184.084512 141.809629,184.952226 141.812062,186.129516 C141.814496,187.324535 142.824423,188.244395 144.097349,188.210848 C145.377923,188.177127 146.287032,187.311846 146.281991,186.131254 C146.276602,184.886 145.367841,184.060872 144.01513,184.07304 Z M142.146503,201.737074 L145.988051,201.737074 L145.988051,189.859887 L142.146503,189.859887 L142.146503,201.737074 Z M160.3431,201.737595 C160.3431,200.77793 160.359092,199.912649 160.339797,199.048411 C160.297384,197.141074 160.35127,195.22209 160.151197,193.330571 C159.965029,191.571676 158.981523,190.238469 157.195986,189.734389 C155.425745,189.234479 153.809861,189.506162 152.543019,190.983988 C152.468274,191.071072 152.362936,191.131735 152.225613,191.241938 C152.200582,190.723256 152.180245,190.300176 152.160255,189.884396 L148.27751,189.884396 L148.27751,201.716389 L152.197801,201.716389 L152.197801,200.807479 C152.197801,198.867116 152.18911,196.926926 152.201104,194.986737 C152.208926,193.72497 153.005222,192.801286 154.126919,192.710551 C155.388546,192.608344 156.05708,193.199857 156.289311,194.651088 C156.343892,194.992125 156.356234,195.342548 156.35745,195.6888 C156.364056,197.426314 156.35832,199.163828 156.362839,200.901343 C156.363534,201.176675 156.393954,201.452007 156.411336,201.737595 L160.3431,201.737595 Z M150.518471,176.000273 C160.296689,176.054331 168.064091,183.914863 167.999601,193.690901 C167.93685,203.246883 160.00049,211.043274 150.380279,210.999819 C140.749118,210.956364 132.889067,202.98702 133.001185,193.378893 C133.114171,183.6809 140.909733,175.947083 150.518471,176.000273 Z" id="Fill-1"></path>
+                    </g>
+                  </g>
+                </g>
+              </g>
+            </svg>
+          </a>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <img src="/images/team/janko.svg">
           <h4>Jan Lopusek</h4>
-          <p>Slovak</p>
+          <p>Net-worker</p>
+          <a href="">
+            <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g id="Blockchain---doplnene-texty-2" transform="translate(-383.000000, -4098.000000)" fill="#1C1C37">
+                  <g id="paticka" transform="translate(0.000000, 3772.000000)">
+                    <g id="box-1-copy-4" transform="translate(250.000000, 150.000000)">
+                      <path d="M144.01513,184.07304 C142.739075,184.084512 141.809629,184.952226 141.812062,186.129516 C141.814496,187.324535 142.824423,188.244395 144.097349,188.210848 C145.377923,188.177127 146.287032,187.311846 146.281991,186.131254 C146.276602,184.886 145.367841,184.060872 144.01513,184.07304 Z M142.146503,201.737074 L145.988051,201.737074 L145.988051,189.859887 L142.146503,189.859887 L142.146503,201.737074 Z M160.3431,201.737595 C160.3431,200.77793 160.359092,199.912649 160.339797,199.048411 C160.297384,197.141074 160.35127,195.22209 160.151197,193.330571 C159.965029,191.571676 158.981523,190.238469 157.195986,189.734389 C155.425745,189.234479 153.809861,189.506162 152.543019,190.983988 C152.468274,191.071072 152.362936,191.131735 152.225613,191.241938 C152.200582,190.723256 152.180245,190.300176 152.160255,189.884396 L148.27751,189.884396 L148.27751,201.716389 L152.197801,201.716389 L152.197801,200.807479 C152.197801,198.867116 152.18911,196.926926 152.201104,194.986737 C152.208926,193.72497 153.005222,192.801286 154.126919,192.710551 C155.388546,192.608344 156.05708,193.199857 156.289311,194.651088 C156.343892,194.992125 156.356234,195.342548 156.35745,195.6888 C156.364056,197.426314 156.35832,199.163828 156.362839,200.901343 C156.363534,201.176675 156.393954,201.452007 156.411336,201.737595 L160.3431,201.737595 Z M150.518471,176.000273 C160.296689,176.054331 168.064091,183.914863 167.999601,193.690901 C167.93685,203.246883 160.00049,211.043274 150.380279,210.999819 C140.749118,210.956364 132.889067,202.98702 133.001185,193.378893 C133.114171,183.6809 140.909733,175.947083 150.518471,176.000273 Z" id="Fill-1"></path>
+                    </g>
+                  </g>
+                </g>
+              </g>
+            </svg>
+          </a>
         </div>
       </div>
     </div>
