--- a/blockchain.topmonks.cz/src/html/index.html
+++ b/blockchain.topmonks.cz/src/html/index.html
@@ -116,16 +116,16 @@
 
     <ul id="navigace">
       <li>
-        <a href="#uvod">What can we do for you</a>
+        <a href="#we-offer">What can we do for you</a>
       </li>
       <li>
-        <a href="#courses">Security first</a>
+        <a href="#security">Security first</a>
       </li>
       <li>
-        <a href="#galerie">How we work</a>
+        <a href="#our-work">How we work</a>
       </li>
       <li>
-        <a href="#reference">Contact</a>
+        <a href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -137,7 +137,13 @@
         <div class="developers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h1>Wanna developers
             for you blockchain idea?</h1>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        </div>
+        <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <a href="" class="button">HIRE OUR DTEAM</a>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         </div>
       </div>
     </div>
@@ -149,13 +155,21 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Our Main Values</h2>
         </div>
-        <div class="value_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      </div>
+    </div>
+    <div class="mdc-layout-grid values_bg">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+        </div>
+        <div class="value_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <h3>Your freedom can't affect the<br> freedom of others</h3>
           <p>We realize that the freedom comes with responsibility.</p>
         </div>
-        <div class="value_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="value_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <h3>Life is a constant change.<br> Embrace it.</h3>
           <p>We never lose our heads when facing chaos.</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
         </div>
       </div>
     </div>
@@ -201,19 +215,23 @@
   </section>
 
   <section id="we-offer2" class="offer2">
-    <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid offer2_bg">
       <div class="mdc-layout-grid__inner">
-        <div class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+        </div>
+        <div class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <h3>Infrastructure</h3>
           <p>You shall not underestimate the hosting of infrastructure and its security. We know what is needed to be
             done and we will set it up for you. Decentralizovane projekty vyzaduju decentralizovanu architekturu, vieme
             vam pomoct so setupom your nodes and master nodes, make it always scalable and manage its security.</p>
         </div>
-        <div class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <h3>Consultations</h3>
           <p>If not sure, where to start with your ICO or dApp, you can discuss your current idea with us. We can help
             you with matters of Security audits, cryptography, architecture, training, testing, code review, code
             update, and everything else that is part of our skillset.</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
         </div>
       </div>
     </div>
