--- a/blockchain.topmonks.cz/src/html/index.html
+++ b/blockchain.topmonks.cz/src/html/index.html
@@ -138,12 +138,8 @@
           <h1>Wanna developers
             for you blockchain idea?</h1>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-        </div>
-        <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <a href="" class="button">HIRE OUR DTEAM</a>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         </div>
       </div>
     </div>
@@ -159,18 +155,16 @@
     </div>
     <div class="mdc-layout-grid values_bg">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-        </div>
-        <div class="value_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+
+        <div class="value_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>Your freedom can't affect the<br> freedom of others</h3>
           <p>We realize that the freedom comes with responsibility.</p>
         </div>
-        <div class="value_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="value_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>Life is a constant change.<br> Embrace it.</h3>
           <p>We never lose our heads when facing chaos.</p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-        </div>
+
       </div>
     </div>
   </section>
@@ -217,21 +211,17 @@
   <section id="we-offer2" class="offer2">
     <div class="mdc-layout-grid offer2_bg">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-        </div>
-        <div class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="offer2-box offer2-box_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>Infrastructure</h3>
           <p>You shall not underestimate the hosting of infrastructure and its security. We know what is needed to be
             done and we will set it up for you. Decentralizovane projekty vyzaduju decentralizovanu architekturu, vieme
             vam pomoct so setupom your nodes and master nodes, make it always scalable and manage its security.</p>
         </div>
-        <div class="offer2-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="offer2-box offer2-box_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>Consultations</h3>
           <p>If not sure, where to start with your ICO or dApp, you can discuss your current idea with us. We can help
             you with matters of Security audits, cryptography, architecture, training, testing, code review, code
             update, and everything else that is part of our skillset.</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
         </div>
       </div>
     </div>
@@ -262,19 +252,22 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>How we work</h2>
         </div>
-        <div class="our-work_box box1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div
+          class="our-work_box box1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">We listen</h3>
           <p>We see the time devoted to your project as an investment into your future. We
             listen to your ideas and needs and think about the best solution to do the
             project right the first&nbsp;time.</p>
         </div>
-        <div class="our-work_box box2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div
+          class="our-work_box box2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">We develop</h3>
           <p>We work with the latest technologies to get the best results. We don’t need lengthy training or
             explanations. We’ll provide you with a great team of senior developers who are ready to work
             immediately.</p>
         </div>
-        <div class="our-work_box box3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div
+          class="our-work_box box3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">We verify</h3>
           <p>We closely examine and test every idea and every feature in every step of the
             project. We concentrate on the needs of the end user. We don’t take risks. We
@@ -286,19 +279,22 @@
           <h2>Why TopMonks?</h2>
           <h2 class="h2_title">Because We Drive the Community!</h2>
         </div>
-        <div class="our-work_crypto mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+        <div
+          class="our-work_crypto mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">Crypto-salaries</h3>
           <p>We are not just crypto fans. We do not just dream of the decentralized world.
             We live it. We pay our employees in cryptocurrencies and they don't just hold
             it, they buy stuff for it. That's&nbsp;normal for&nbsp;us.</p>
         </div>
-        <div class="our-work_members mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+        <div
+          class="our-work_members mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">Members of community</h3>
           <p>We are active participants of blockchain events and hackathons in the first
             blockchain hub in The Czech Republic&nbsp;&ndash; Paralelni Polis. We are also members
             of Cryptovalley and Blockchain Slovakia.</p>
         </div>
-        <div class="our-work_blockstars mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+        <div
+          class="our-work_blockstars mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">Blockstars Conference</h3>
           <p>We co-organized blockchain Summit. Its goal was to promote blockchain through the commercial and startup
             scene and support new blockchain and ICO projects to offer inspiration both within and beyond the crypto
