--- a/blockchain.topmonks.cz/src/html/index.html
+++ b/blockchain.topmonks.cz/src/html/index.html
@@ -235,7 +235,7 @@
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <h3 class="h3_larger">Security first</h3>
+          <img src="images/security-first.svg" class="security_first-img">
         </div>
         <div class="security_text mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <p>Security matters and you should not take it lightly. Any blockchain network is only as secure as its
