Caffe microsite - poster shadows + posters width

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <header>
-  <div class="mdc-layout-grid tm-layout-wrapper">
+  <div class="mdc-layout-grid tm-header tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
@@ -246,7 +246,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Přečtěte si, o&nbsp;čem přednášíme</h2>
         </div>
-        <div class="latest-news mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="box-shadow mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <div class="news-img">
             <img src="/images/news1.svg" class="img-responsive">
           </div>
@@ -258,7 +258,7 @@
           </div>
         </div>
 
-        <div class="latest-news mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="box-shadow mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <div class="news-img">
             <img src="/images/news2.svg" class="img-responsive">
           </div>
@@ -274,7 +274,7 @@
           </div>
         </div>
 
-        <div class="latest-news mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="box-shadow mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <div class="news-img">
             <img src="/images/news3.svg" class="img-responsive">
           </div>
